--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "mpratt/embera": "~1.0",
     "nicolaslopezj/searchable": "^1.10",
     "rap2hpoutre/laravel-log-viewer": "1.4",
+    "silviolleite/laravelpwa": "^2.0",
     "spatie/laravel-honeypot": "^2",
     "suin/php-rss-writer": "^1.6",
     "toin0u/geocoder-laravel": "^4.1",
