at some point I will understand this

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "toin0u/geocoder-laravel": "^4.1",
     "venturecraft/revisionable": "1.*",
     "watson/validating": "^5",
+    "webstronauts/unpoly": "^1.1",
     "willdurand/email-reply-parser": "^2.8"
   },
   "require-dev": {
