--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "nicolaslopezj/searchable": "^1.10",
     "rap2hpoutre/laravel-log-viewer": "1.4",
     "spatie/laravel-honeypot": "^2",
+    "stancl/tenancy": "3.x-dev",
     "suin/php-rss-writer": "^1.6",
     "toin0u/geocoder-laravel": "^4.1",
     "venturecraft/revisionable": "1.*",
